force-app/main/default/objects/Market_Insight__c/Market_Insight__c.object-meta.xml
<CustomObject>
    <label>Market Insight</label>
    <nameField>
        <label>Market Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>