force-app/main/default/objects/Market_Insight__c/fields/All_Info__c.field-meta.xml
<CustomField>
    <fullName>All_Info__c</fullName>
    <label>All Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>