force-app/main/default/objects/Market_Insight__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <label>Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>