force-app/main/default/objects/Market_Insight__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>